WIP: About section

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="icon_.png" type="image/png">
     <meta
       name="description"
       content="Tati lima web site"
     />
-    <title>Tati Lima</title>
+    <title>Tati Lima Beauty & Academy</title>
   </head>
   <body>
     <noscript>Tati Lima web site</noscript>
